2003-02-02  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Added missing accelerators for menus,
	context menu pops up when press Shift-F10

2003-03-01  Jacob Perkins  <jap1@users.sourceforge.net>

	* data/seahorse.schemas.in: Added listing/progress_update schema
	* seahorse-context: Added ::get_progress_update, uses listing/progress_update
	setting for startup loading progress
	* seahorse-key-store: Use progress update setting for ::populate
	* seahorse-encrypt-sign-file:
	* seahorse-decrypt-verify-file:
	Added
	* seahorse-key-manager: Added support for encrypt & sign and decrypt & verify
	* seahorse-key-properties: Disable Add Revoker if not a pair,
	allow deletion on non-pair subkeys
	* seahorse-ops-key: Updated ::del_subkey to delete non-pair subkeys
	* seahorse-delete: Added extra dialog for deleting a key-pair
	* seahorse-widget: Don't insensitize widget for final progress call
	* seahorse-encrypt-file:
	* seahorse-sign-file:
	* seahorse-decrypt-file:
	* seahorse-verify-file:
	Added comments, made strings consistent

2003-02-28  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* src/dialogs/seahorse-export.glade2: Changed Ok to Export
	* src/Makefile.am: changed fr-marshal.list to seahorse-marshal.list

2003-02-28  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Removed status signal, removed ::key_has_secret,
	updated comments
	* seahorse-widget: Does progress bar cleanup when op complete,
	added comments
	* seahorse-key-properties:
	* seahorse-key-manager:
	* seahorse-text-editor:
	Removed focus-in-event
	* seahorse-key-manager:
	* seahorse-key-properties:
	Replaced seahorse_context_key_has_secret with SEAHORSE_IS_KEY_PAIR

2003-02-26  Jacob Perkins  <jap1@users.sourceforge.net>
	
	* seahorse-context: Bug fix in ::key_added

2003-02-25  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-marshal: Added
	* seahorse-context: Added ::show_progress and progress signal