@@ -76,7 +76,11 @@ Future Features
 [ ] Bonoboize
 [ ] Visual trust diagram
 [ ] Complete usage & concept manual
-[ ] Other app plugins
+[ ] Balsa plugin
+[ ] Gaim plugin
+[ ] Some kind of component that can be detected at runtime that apps could use
+to encrypt files or text.  Maybe this would be an applet, or something similar
+to a viewer, but in actuality a Saver/Converter (?).
 
 Non-tasked issues/todo
 ----------------------
@@ -96,6 +100,3 @@ to changes to those keys that have signed it.
 3. Register a keys:/// uri, which could allow editing from within nautilus.
 Keys would be listed with photos as icons.  If no photo, then do secret icon
 or non-secret icon.
-4. Not every operation needs to be run with the main context. For example,
-signing does not necessarily require a complete key listing.
-Perhaps a new context should not automatically list keys, but instead do so on demand.
