@@ -295,7 +295,7 @@
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
 	      <property name="invisible_char" translatable="yes">*</property>
-	      <property name="activates_default">True</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="left_attach">1</property>
@@ -317,7 +317,7 @@
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
 	      <property name="invisible_char" translatable="yes">*</property>
-	      <property name="activates_default">True</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="left_attach">1</property>
@@ -339,7 +339,7 @@
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
 	      <property name="invisible_char" translatable="yes">*</property>
-	      <property name="activates_default">True</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="left_attach">1</property>
@@ -384,7 +384,7 @@
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
 	      <property name="invisible_char" translatable="yes">*</property>
-	      <property name="activates_default">True</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="left_attach">1</property>
