@@ -54,7 +54,9 @@
 	  <child>
 	    <widget class="GtkButton" id="ok">
 	      <property name="visible">True</property>
+	      <property name="sensitive">False</property>
 	      <property name="can_default">True</property>
+	      <property name="has_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-ok</property>
 	      <property name="use_stock">True</property>
@@ -196,8 +198,8 @@
 	      <child>
 		<widget class="GtkButton" id="add">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="tooltip" translatable="yes">Add key to recipient list</property>
-		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="add_clicked" last_modification_time="Sat, 02 Nov 2002 20:27:22 GMT"/>
@@ -263,8 +265,8 @@
 	      <child>
 		<widget class="GtkButton" id="remove">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="tooltip" translatable="yes">Remove key from recipient list</property>
-		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="remove_clicked" last_modification_time="Sat, 02 Nov 2002 20:27:16 GMT"/>
