@@ -62,7 +62,7 @@
 			  <accelerator key="I" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1144">
+			    <widget class="GtkImage" id="image1178">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -90,7 +90,7 @@
 			  <signal name="activate" handler="properties_activate" last_modification_time="Wed, 12 Feb 2003 02:03:56 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1145">
+			    <widget class="GtkImage" id="image1179">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-properties</property>
 			      <property name="icon_size">1</property>
@@ -104,6 +104,12 @@
 		      </child>
 
 		      <child>
+			<widget class="GtkMenuItem" id="separator13">
+			  <property name="visible">True</property>
+			</widget>
+		      </child>
+
+		      <child>
 			<widget class="GtkImageMenuItem" id="export">
 			  <property name="visible">True</property>
 			  <property name="tooltip" translatable="yes">Export key</property>
@@ -112,7 +118,7 @@
 			  <signal name="activate" handler="export_activate" last_modification_time="Wed, 12 Feb 2003 02:03:56 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1146">
+			    <widget class="GtkImage" id="image1180">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-save-as</property>
 			      <property name="icon_size">1</property>
@@ -134,7 +140,7 @@
 			  <signal name="activate" handler="sign_activate" last_modification_time="Wed, 12 Feb 2003 02:09:46 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1147">
+			    <widget class="GtkImage" id="image1181">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-index</property>
 			      <property name="icon_size">1</property>
@@ -156,7 +162,7 @@
 			  <signal name="activate" handler="delete_activate" last_modification_time="Wed, 12 Feb 2003 02:05:07 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1148">
+			    <widget class="GtkImage" id="image1182">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-delete</property>
 			      <property name="icon_size">1</property>
@@ -184,7 +190,7 @@
 			  <signal name="activate" handler="change_passphrase_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1149">
+			    <widget class="GtkImage" id="image1183">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-copy</property>
 			      <property name="icon_size">1</property>
@@ -206,7 +212,7 @@
 			  <signal name="activate" handler="add_uid_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1150">
+			    <widget class="GtkImage" id="image1184">
 			      <property name="visible">True</property>
 			      <property name="stock">gnome-stock-text-unindent</property>
 			      <property name="icon_size">1</property>
@@ -228,7 +234,7 @@
 			  <signal name="activate" handler="add_subkey_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1151">
+			    <widget class="GtkImage" id="image1185">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -250,7 +256,7 @@
 			  <signal name="activate" handler="add_photo_activate" last_modification_time="Wed, 12 Feb 2003 02:14:41 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1152">
+			    <widget class="GtkImage" id="image1186">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-select-color</property>
 			      <property name="icon_size">1</property>
@@ -272,7 +278,7 @@
 			  <signal name="activate" handler="add_revoker_activate" last_modification_time="Wed, 12 Feb 2003 02:13:03 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1153">
+			    <widget class="GtkImage" id="image1187">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-cancel</property>
 			      <property name="icon_size">1</property>
@@ -376,7 +382,7 @@
 			  <accelerator key="E" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1154">
+			    <widget class="GtkImage" id="image1188">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-sort-ascending</property>
 			      <property name="icon_size">1</property>
@@ -399,7 +405,7 @@
 			  <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1155">
+			    <widget class="GtkImage" id="image1189">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-index</property>
 			      <property name="icon_size">1</property>
@@ -421,7 +427,7 @@
 			  <signal name="activate" handler="encrypt_sign_file_activate" last_modification_time="Sat, 01 Mar 2003 17:05:28 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1156">
+			    <widget class="GtkImage" id="image1190">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-convert</property>
 			      <property name="icon_size">1</property>
@@ -450,7 +456,7 @@
 			  <accelerator key="D" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1157">
+			    <widget class="GtkImage" id="image1191">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-sort-descending</property>
 			      <property name="icon_size">1</property>
@@ -473,7 +479,7 @@
 			  <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1158">
+			    <widget class="GtkImage" id="image1192">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-apply</property>
 			      <property name="icon_size">1</property>
@@ -495,7 +501,7 @@
 			  <signal name="activate" handler="decrypt_verify_file_activate" last_modification_time="Sat, 01 Mar 2003 17:05:28 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1159">
+			    <widget class="GtkImage" id="image1193">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-spell-check</property>
 			      <property name="icon_size">1</property>
@@ -524,7 +530,7 @@
 			  <accelerator key="T" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1160">
+			    <widget class="GtkImage" id="image1194">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-justify-fill</property>
 			      <property name="icon_size">1</property>
@@ -559,7 +565,7 @@
 			  <accelerator key="F1" modifiers="0" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1161">
+			    <widget class="GtkImage" id="image1195">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-help</property>
 			      <property name="icon_size">1</property>
@@ -721,7 +727,7 @@
       <signal name="activate" handler="properties_activate" last_modification_time="Wed, 12 Feb 2003 02:32:22 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image792">
+	<widget class="GtkImage" id="image1196">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-properties</property>
 	  <property name="icon_size">1</property>
@@ -735,6 +741,12 @@
   </child>
 
   <child>
+    <widget class="GtkMenuItem" id="separator14">
+      <property name="visible">True</property>
+    </widget>
+  </child>
+
+  <child>
     <widget class="GtkImageMenuItem" id="key_export">
       <property name="visible">True</property>
       <property name="tooltip" translatable="yes">Export selected key</property>
@@ -743,7 +755,7 @@
       <signal name="activate" handler="export_activate" last_modification_time="Wed, 12 Feb 2003 02:32:22 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image793">
+	<widget class="GtkImage" id="image1197">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-save-as</property>
 	  <property name="icon_size">1</property>
@@ -765,7 +777,7 @@
       <signal name="activate" handler="sign_activate" last_modification_time="Wed, 12 Feb 2003 02:32:22 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image794">
+	<widget class="GtkImage" id="image1198">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-index</property>
 	  <property name="icon_size">1</property>
@@ -787,7 +799,7 @@
       <signal name="activate" handler="delete_activate" last_modification_time="Wed, 12 Feb 2003 02:36:40 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image795">
+	<widget class="GtkImage" id="image1199">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-delete</property>
 	  <property name="icon_size">1</property>
@@ -815,7 +827,7 @@
       <signal name="activate" handler="change_passphrase_activate" last_modification_time="Wed, 12 Feb 2003 02:36:40 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image796">
+	<widget class="GtkImage" id="image1200">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-copy</property>
 	  <property name="icon_size">1</property>
@@ -837,7 +849,7 @@
       <signal name="activate" handler="add_uid_activate" last_modification_time="Wed, 12 Feb 2003 02:36:40 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image797">
+	<widget class="GtkImage" id="image1201">
 	  <property name="visible">True</property>
 	  <property name="stock">gnome-stock-text-unindent</property>
 	  <property name="icon_size">1</property>
@@ -859,7 +871,7 @@
       <signal name="activate" handler="add_subkey_activate" last_modification_time="Wed, 12 Feb 2003 02:36:40 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image798">
+	<widget class="GtkImage" id="image1202">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-add</property>
 	  <property name="icon_size">1</property>
@@ -881,7 +893,7 @@
       <signal name="activate" handler="add_photo_activate" last_modification_time="Wed, 12 Feb 2003 02:36:40 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image799">
+	<widget class="GtkImage" id="image1203">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-select-color</property>
 	  <property name="icon_size">1</property>
@@ -903,7 +915,7 @@
       <signal name="activate" handler="add_revoker_activate" last_modification_time="Wed, 12 Feb 2003 02:32:22 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image800">
+	<widget class="GtkImage" id="image1204">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-cancel</property>
 	  <property name="icon_size">1</property>
