@@ -11,6 +11,7 @@ seahorse 0.7.1
 	* Performance improvements with large key rings, especially in loading preferences
 	* Progress display at startup for listing of keys
 	* Can delete subkeys of non key-pairs
+	* General interface cleanups
 
 seahorse 0.7.0
 --------------
