@@ -1,7 +1,15 @@
 2003-02-02  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-key-manager: Added missing accelerators for menus,
-	context menu pops up when press Shift-F10
+	context menu pops up when press Shift-F10,
+	added separator after Properties menu button
+	* seahorse-generate:
+	* seahorse-add-subkey:
+	* seahorse-add-uid:
+	* seahorse-sign:
+	* seahorse-signatures:
+	Fixed up defaults
+	* seahorse-recipients: Made buttons insensitive when not available
 
 2003-03-01  Jacob Perkins  <jap1@users.sourceforge.net>
 
